# pypickle

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  make_build.sh  make_clean.sh  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: pytest.yml
docs/pages/doctrees/: Coding quality.doctree  Documentation.doctree  Installation.doctree  Save_and_Load.doctree  environment.pickle  general.doctree  index.doctree  load.doctree  pypickle.pypickle.doctree  save.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Coding quality.html  Documentation.html  Installation.html  Save_and_Load.html  general.html  genindex.html  index.html  load.html  objects.inv  py-modindex.html  pypickle.pypickle.html  save.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Coding quality.rst.txt  Documentation.rst.txt  Installation.rst.txt  Save_and_Load.rst.txt  general.rst.txt  index.rst.txt  pypickle.pypickle.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Coding quality.rst  Documentation.rst  Installation.rst  Save_and_Load.rst  conf.py  index.rst  load.rst  pypickle.pypickle.rst  save.rst
pypickle/: __init__.py  examples.py  pypickle.py
tests/: run_exploit_example.py  test_pypickle.py
