[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypickle"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "pypickle is a Python library to save and load variables in pickle files."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["Python", "pypi", "pickle", "save", "load"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://erdogant.github.io/pypickle"
Download = "https://github.com/erdogant/pypickle/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["pypickle"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pypickle.__version__" }
